# JEDM-Paper-Pipeline

./: .gitignore  JEDM_Manuscript_Analysis.ipynb  README.md  pyproject.toml  requirements-pyldavis.txt  requirements.txt
configs/: default.yaml
data/paper_release/: README.md  reagan_600_per_type_comparison_gpt4o_vs_gpt55.csv  reagan_llm_eval_model_comparison_full_metrics.csv  rq2_entity_profile_mention_summary.csv  rq2_entity_profile_token_summary.csv  sample4_run_summary.csv  sample4_vs_asr_llm_gold_by_type.csv  sample4_vs_asr_llm_gold_overall.csv
prompts/: coref_prompt.txt  ner_prompt.txt
scripts/: _bootstrap.py  run_all.py  run_coref.py  run_corpus_descriptives.py  run_download_subs.py  run_entity_level_comparison.py  run_entity_profile_summary.py  run_eval_rq1.py  run_eval_rq2.py  run_eval_rq3_pyldavis.py  run_eval_rq3_topic.py  run_full_corpus_token_annotation.py  run_k_selection.py  run_ner_enhance.py  run_ner_on_dir.py  run_reagan_case_eval.py  run_reagan_dictionary_eval.py  run_reagan_token_eval.py  run_single_doc_token_annotation.py  run_srt_to_txt.py
src/jedm_pipeline/: config.py  corpus_descriptives.py  io_utils.py  llm_client.py  metrics_asr.py  metrics_ner.py  paths.py  pipeline.py  text_cleaning.py  topic_modeling.py  topic_pyldavis.py  topic_selection.py
tests/: test_metrics_ner.py  test_text_cleaning.py
